# LessonDRFGraphQL

./: pyproject.toml
core/: settings.py  urls.py
libraries/: models.py  schema.py
