[tool.poetry]
name = "lessondrfgraphql"
version = "0.1.0"
description = ""
authors = ["Michkail <55208634+Michkail@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graphene-django = "^3.1.2"
django = "3.2"
django-cassandra-engine = "^1.8.0"
cassandra-driver = "^3.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
